--- a/solution/engine.vcxproj
+++ b/solution/engine.vcxproj
@@ -91,12 +91,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\engine\include\AcceptChannel.h" />
     <ClInclude Include="..\engine\include\API.h" />
     <ClInclude Include="..\engine\include\Algo.h" />
     <ClInclude Include="..\engine\include\Application.h" />
     <ClInclude Include="..\engine\include\AssetCache.h" />
     <ClInclude Include="..\engine\include\Attribute.h" />
     <ClInclude Include="..\engine\include\Bits.h" />
+    <ClInclude Include="..\engine\include\Buffer.h" />
+    <ClInclude Include="..\engine\include\Channel.h" />
     <ClInclude Include="..\engine\include\CMath.h" />
     <ClInclude Include="..\engine\include\CProcess.h" />
     <ClInclude Include="..\engine\include\Camera.h" />
@@ -110,6 +113,7 @@
     <ClInclude Include="..\engine\include\DynLib.h" />
     <ClInclude Include="..\engine\include\Engine.h" />
     <ClInclude Include="..\engine\include\Event.h" />
+    <ClInclude Include="..\engine\include\EventLoop.h" />
     <ClInclude Include="..\engine\include\FourCC.h" />
     <ClInclude Include="..\engine\include\Frustum.h" />
     <ClInclude Include="..\engine\include\FuncTraits.h" />
@@ -124,6 +128,7 @@
     <ClInclude Include="..\engine\include\Plane.h" />
     <ClInclude Include="..\engine\include\Platform.h" />
     <ClInclude Include="..\engine\include\Plugin.h" />
+    <ClInclude Include="..\engine\include\Poller.h" />
     <ClInclude Include="..\engine\include\Quaternion.h" />
     <ClInclude Include="..\engine\include\Range.h" />
     <ClInclude Include="..\engine\include\Ray.h" />
@@ -135,9 +140,13 @@
     <ClInclude Include="..\engine\include\Scene.h" />
     <ClInclude Include="..\engine\include\Singleton.h" />
     <ClInclude Include="..\engine\include\SmartPtr.h" />
+    <ClInclude Include="..\engine\include\Socket.h" />
+    <ClInclude Include="..\engine\include\SocketAddress.h" />
+    <ClInclude Include="..\engine\include\SocketChannel.h" />
     <ClInclude Include="..\engine\include\StringPiece.h" />
     <ClInclude Include="..\engine\include\StringUtil.h" />
     <ClInclude Include="..\engine\include\SyncEvent.h" />
+    <ClInclude Include="..\engine\include\TcpServer.h" />
     <ClInclude Include="..\engine\include\Texture.h" />
     <ClInclude Include="..\engine\include\Thread.h" />
     <ClInclude Include="..\engine\include\Traits.h" />
@@ -156,8 +165,10 @@
     <ClInclude Include="..\engine\include\WorkQueue.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\engine\src\AcceptChannel.cpp" />
     <ClCompile Include="..\engine\src\Application.cpp" />
     <ClCompile Include="..\engine\src\AssetCache.cpp" />
+    <ClCompile Include="..\engine\src\Channel.cpp" />
     <ClCompile Include="..\engine\src\CMath.cpp" />
     <ClCompile Include="..\engine\src\CProcess.cpp" />
     <ClCompile Include="..\engine\src\Camera.cpp" />
@@ -168,22 +179,29 @@
     <ClCompile Include="..\engine\src\Drawable.cpp" />
     <ClCompile Include="..\engine\src\DynLib.cpp" />
     <ClCompile Include="..\engine\src\Engine.cpp" />
+    <ClCompile Include="..\engine\src\EventLoop.cpp" />
     <ClCompile Include="..\engine\src\Frustum.cpp" />
     <ClCompile Include="..\engine\src\Matrix4.cpp" />
     <ClCompile Include="..\engine\src\Mutex.cpp" />
     <ClCompile Include="..\engine\src\Object.cpp" />
     <ClCompile Include="..\engine\src\Plane.cpp" />
+    <ClCompile Include="..\engine\src\Poller.cpp" />
     <ClCompile Include="..\engine\src\Quaternion.cpp" />
     <ClCompile Include="..\engine\src\Ray.cpp" />
     <ClCompile Include="..\engine\src\Ref.cpp" />
     <ClCompile Include="..\engine\src\RenderPath.cpp" />
     <ClCompile Include="..\engine\src\Rtti.cpp" />
     <ClCompile Include="..\engine\src\Scene.cpp" />
+    <ClCompile Include="..\engine\src\Socket.cpp" />
+    <ClCompile Include="..\engine\src\SocketAddress.cpp" />
+    <ClCompile Include="..\engine\src\SocketChannel.cpp" />
     <ClCompile Include="..\engine\src\StringPiece.cpp" />
     <ClCompile Include="..\engine\src\StringUtil.cpp" />
     <ClCompile Include="..\engine\src\SyncEvent.cpp" />
+    <ClCompile Include="..\engine\src\TcpServer.cpp" />
     <ClCompile Include="..\engine\src\Thread.cpp" />
     <ClCompile Include="..\engine\src\Transform.cpp" />
+    <ClCompile Include="..\engine\src\Types.cpp" />
     <ClCompile Include="..\engine\src\Util.cpp" />
     <ClCompile Include="..\engine\src\Variant.cpp" />
     <ClCompile Include="..\engine\src\View.cpp" />
