--- a/solution/engine.vcxproj.filters
+++ b/solution/engine.vcxproj.filters
@@ -1,363 +1,381 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="include">
-      <UniqueIdentifier>{89AF369E-F58E-B539-FEA6-40106A051C9B}</UniqueIdentifier>
+    <Filter Include="core">
+      <UniqueIdentifier>{4E40957C-3A77-960D-E363-7C10CF79120F}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src">
-      <UniqueIdentifier>{2DAB880B-99B4-887C-2230-9F7C8E38947C}</UniqueIdentifier>
+    <Filter Include="engine">
+      <UniqueIdentifier>{FBDB78FB-E77D-A3D1-D038-B725BC792A22}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="graphics">
+      <UniqueIdentifier>{36EF08BC-22BC-63C7-4BD5-516F37019955}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="math">
+      <UniqueIdentifier>{CF809A7C-BBB7-9B0D-64A4-811050BA170F}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="net">
+      <UniqueIdentifier>{4C94880B-B89D-887C-4119-9F7CAD21947C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="os">
+      <UniqueIdentifier>{07795900-F304-880B-5CB3-880B485E880B}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="render">
+      <UniqueIdentifier>{E5CF2C19-D171-57EF-BA2C-6B43A66DDE3F}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ui">
+      <UniqueIdentifier>{C3795900-AF05-880B-18B4-880B045F880B}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\engine\include\API.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\AcceptChannel.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Algo.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Application.h">
-      <Filter>include</Filter>
+      <Filter>ui</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\AssetCache.h">
-      <Filter>include</Filter>
+      <Filter>engine</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Attribute.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Bits.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Buffer.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\CMath.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\CProcess.h">
-      <Filter>include</Filter>
+      <Filter>os</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Camera.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Canvas.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Channel.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Color.h">
-      <Filter>include</Filter>
+      <Filter>graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Component.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Condition.h">
-      <Filter>include</Filter>
+      <Filter>os</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Context.h">
-      <Filter>include</Filter>
+      <Filter>engine</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Delegate.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Drawable.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\DynLib.h">
-      <Filter>include</Filter>
+      <Filter>os</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Engine.h">
-      <Filter>include</Filter>
+      <Filter>engine</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Event.h">
-      <Filter>include</Filter>
+      <Filter>engine</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\EventLoop.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\FourCC.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Frustum.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\FuncTraits.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Function.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\GpuBuffer.h">
-      <Filter>include</Filter>
+      <Filter>graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Graphics.h">
-      <Filter>include</Filter>
+      <Filter>graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\IOOperation.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\List.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Macro.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Matrix4.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Mutex.h">
-      <Filter>include</Filter>
+      <Filter>os</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Object.h">
-      <Filter>include</Filter>
+      <Filter>engine</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Plane.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Platform.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Plugin.h">
-      <Filter>include</Filter>
+      <Filter>engine</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Poller.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Quaternion.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Range.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Ray.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Rect.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Ref.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\RenderPath.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Renderer.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Rtti.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Scene.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Singleton.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\SmartPtr.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Socket.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\SocketAddress.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\SocketChannel.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\StringPiece.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\StringUtil.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\SyncEvent.h">
-      <Filter>include</Filter>
+      <Filter>os</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\TcpServer.h">
-      <Filter>include</Filter>
+      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Texture.h">
-      <Filter>include</Filter>
+      <Filter>graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Thread.h">
-      <Filter>include</Filter>
+      <Filter>os</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Traits.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Transform.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Tuple.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Types.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\UIView.h">
-      <Filter>include</Filter>
+      <Filter>ui</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\UIWidget.h">
-      <Filter>include</Filter>
+      <Filter>ui</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Util.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Variant.h">
-      <Filter>include</Filter>
+      <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Vector2.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Vector3.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Vector4.h">
-      <Filter>include</Filter>
+      <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\View.h">
-      <Filter>include</Filter>
+      <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Window.h">
-      <Filter>include</Filter>
+      <Filter>ui</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\WorkQueue.h">
-      <Filter>include</Filter>
+      <Filter>engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\engine\src\AcceptChannel.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Application.cpp">
-      <Filter>src</Filter>
+      <Filter>ui</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\AssetCache.cpp">
-      <Filter>src</Filter>
+      <Filter>engine</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\CMath.cpp">
-      <Filter>src</Filter>
+      <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\CProcess.cpp">
-      <Filter>src</Filter>
+      <Filter>os</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Camera.cpp">
-      <Filter>src</Filter>
+      <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Channel.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Color.cpp">
-      <Filter>src</Filter>
+      <Filter>graphics</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Component.cpp">
-      <Filter>src</Filter>
+      <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Condition.cpp">
-      <Filter>src</Filter>
+      <Filter>os</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Context.cpp">
-      <Filter>src</Filter>
+      <Filter>engine</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Drawable.cpp">
-      <Filter>src</Filter>
+      <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\DynLib.cpp">
-      <Filter>src</Filter>
+      <Filter>os</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Engine.cpp">
-      <Filter>src</Filter>
+      <Filter>engine</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\EventLoop.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Frustum.cpp">
-      <Filter>src</Filter>
+      <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\IOOperation.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Matrix4.cpp">
-      <Filter>src</Filter>
+      <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Mutex.cpp">
-      <Filter>src</Filter>
+      <Filter>os</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Object.cpp">
-      <Filter>src</Filter>
+      <Filter>engine</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Plane.cpp">
-      <Filter>src</Filter>
+      <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Poller.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Quaternion.cpp">
-      <Filter>src</Filter>
+      <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Ray.cpp">
-      <Filter>src</Filter>
+      <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Ref.cpp">
-      <Filter>src</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\RenderPath.cpp">
-      <Filter>src</Filter>
+      <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Rtti.cpp">
-      <Filter>src</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Scene.cpp">
-      <Filter>src</Filter>
+      <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Socket.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\SocketAddress.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\SocketChannel.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\StringPiece.cpp">
-      <Filter>src</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\StringUtil.cpp">
-      <Filter>src</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\SyncEvent.cpp">
-      <Filter>src</Filter>
+      <Filter>os</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\TcpServer.cpp">
-      <Filter>src</Filter>
+      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Thread.cpp">
-      <Filter>src</Filter>
+      <Filter>os</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Transform.cpp">
-      <Filter>src</Filter>
+      <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Types.cpp">
-      <Filter>src</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Util.cpp">
-      <Filter>src</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Variant.cpp">
-      <Filter>src</Filter>
+      <Filter>core</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\View.cpp">
-      <Filter>src</Filter>
+      <Filter>render</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Window.cpp">
-      <Filter>src</Filter>
+      <Filter>ui</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\WorkQueue.cpp">
-      <Filter>src</Filter>
+      <Filter>engine</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
