--- a/solution/engine.vcxproj.filters
+++ b/solution/engine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\engine\include\AcceptChannel.h">
       <Filter>net</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\include\Acceptor.h">
+      <Filter>net</Filter>
+    </ClInclude>
     <ClInclude Include="..\engine\include\Algo.h">
       <Filter>core</Filter>
     </ClInclude>
@@ -93,9 +96,6 @@
     <ClInclude Include="..\engine\include\Event.h">
       <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\engine\include\EventLoop.h">
-      <Filter>net</Filter>
-    </ClInclude>
     <ClInclude Include="..\engine\include\FourCC.h">
       <Filter>core</Filter>
     </ClInclude>
@@ -115,6 +115,12 @@
       <Filter>graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\IOOperation.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\include\IOService.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\include\IOServicePool.h">
       <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\List.h">
@@ -144,6 +150,9 @@
     <ClInclude Include="..\engine\include\Poller.h">
       <Filter>net</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\include\Procotol.h">
+      <Filter>net</Filter>
+    </ClInclude>
     <ClInclude Include="..\engine\include\Quaternion.h">
       <Filter>math</Filter>
     </ClInclude>
@@ -171,6 +180,15 @@
     <ClInclude Include="..\engine\include\Scene.h">
       <Filter>render</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\include\Server.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\include\ServerEvent.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\include\Session.h">
+      <Filter>net</Filter>
+    </ClInclude>
     <ClInclude Include="..\engine\include\Singleton.h">
       <Filter>core</Filter>
     </ClInclude>
@@ -194,9 +212,6 @@
     </ClInclude>
     <ClInclude Include="..\engine\include\SyncEvent.h">
       <Filter>os</Filter>
-    </ClInclude>
-    <ClInclude Include="..\engine\include\TcpServer.h">
-      <Filter>net</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Texture.h">
       <Filter>graphics</Filter>
@@ -251,6 +266,9 @@
     <ClCompile Include="..\engine\src\AcceptChannel.cpp">
       <Filter>net</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\src\Acceptor.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
     <ClCompile Include="..\engine\src\Application.cpp">
       <Filter>ui</Filter>
     </ClCompile>
@@ -293,13 +311,16 @@
     <ClCompile Include="..\engine\src\Engine.cpp">
       <Filter>engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\engine\src\EventLoop.cpp">
-      <Filter>net</Filter>
-    </ClCompile>
     <ClCompile Include="..\engine\src\Frustum.cpp">
       <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\IOOperation.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\src\IOService.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\src\IOServicePool.cpp">
       <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Matrix4.cpp">
@@ -315,6 +336,9 @@
       <Filter>math</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Poller.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\src\Procotol.cpp">
       <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Quaternion.cpp">
@@ -335,6 +359,12 @@
     <ClCompile Include="..\engine\src\Scene.cpp">
       <Filter>render</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\src\Server.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\src\Session.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
     <ClCompile Include="..\engine\src\Socket.cpp">
       <Filter>net</Filter>
     </ClCompile>
@@ -352,9 +382,6 @@
     </ClCompile>
     <ClCompile Include="..\engine\src\SyncEvent.cpp">
       <Filter>os</Filter>
-    </ClCompile>
-    <ClCompile Include="..\engine\src\TcpServer.cpp">
-      <Filter>net</Filter>
     </ClCompile>
     <ClCompile Include="..\engine\src\Thread.cpp">
       <Filter>os</Filter>
