--- a/solution/engine.vcxproj
+++ b/solution/engine.vcxproj
@@ -108,18 +108,21 @@
     <ClInclude Include="..\engine\include\Color.h" />
     <ClInclude Include="..\engine\include\Component.h" />
     <ClInclude Include="..\engine\include\Condition.h" />
+    <ClInclude Include="..\engine\include\Config.h" />
     <ClInclude Include="..\engine\include\Context.h" />
     <ClInclude Include="..\engine\include\Delegate.h" />
     <ClInclude Include="..\engine\include\Drawable.h" />
     <ClInclude Include="..\engine\include\DynLib.h" />
     <ClInclude Include="..\engine\include\Engine.h" />
     <ClInclude Include="..\engine\include\Event.h" />
+    <ClInclude Include="..\engine\include\File.h" />
     <ClInclude Include="..\engine\include\FourCC.h" />
     <ClInclude Include="..\engine\include\Frustum.h" />
     <ClInclude Include="..\engine\include\FuncTraits.h" />
     <ClInclude Include="..\engine\include\Function.h" />
     <ClInclude Include="..\engine\include\GpuBuffer.h" />
     <ClInclude Include="..\engine\include\Graphics.h" />
+    <ClInclude Include="..\engine\include\HandlerMgr.h" />
     <ClInclude Include="..\engine\include\IOOperation.h" />
     <ClInclude Include="..\engine\include\IOService.h" />
     <ClInclude Include="..\engine\include\IOServicePool.h" />
@@ -127,12 +130,15 @@
     <ClInclude Include="..\engine\include\Macro.h" />
     <ClInclude Include="..\engine\include\Matrix4.h" />
     <ClInclude Include="..\engine\include\Mutex.h" />
+    <ClInclude Include="..\engine\include\NetEvent.h" />
+    <ClInclude Include="..\engine\include\NetService.h" />
     <ClInclude Include="..\engine\include\Object.h" />
     <ClInclude Include="..\engine\include\Plane.h" />
     <ClInclude Include="..\engine\include\Platform.h" />
     <ClInclude Include="..\engine\include\Plugin.h" />
     <ClInclude Include="..\engine\include\Poller.h" />
     <ClInclude Include="..\engine\include\Procotol.h" />
+    <ClInclude Include="..\engine\include\Proto.h" />
     <ClInclude Include="..\engine\include\Quaternion.h" />
     <ClInclude Include="..\engine\include\Range.h" />
     <ClInclude Include="..\engine\include\Ray.h" />
@@ -142,8 +148,6 @@
     <ClInclude Include="..\engine\include\Renderer.h" />
     <ClInclude Include="..\engine\include\Rtti.h" />
     <ClInclude Include="..\engine\include\Scene.h" />
-    <ClInclude Include="..\engine\include\Server.h" />
-    <ClInclude Include="..\engine\include\ServerEvent.h" />
     <ClInclude Include="..\engine\include\Session.h" />
     <ClInclude Include="..\engine\include\Singleton.h" />
     <ClInclude Include="..\engine\include\SmartPtr.h" />
@@ -183,27 +187,32 @@
     <ClCompile Include="..\engine\src\Color.cpp" />
     <ClCompile Include="..\engine\src\Component.cpp" />
     <ClCompile Include="..\engine\src\Condition.cpp" />
+    <ClCompile Include="..\engine\src\Config.cpp" />
     <ClCompile Include="..\engine\src\Context.cpp" />
     <ClCompile Include="..\engine\src\Drawable.cpp" />
     <ClCompile Include="..\engine\src\DynLib.cpp" />
     <ClCompile Include="..\engine\src\Engine.cpp" />
+    <ClCompile Include="..\engine\src\File.cpp" />
     <ClCompile Include="..\engine\src\Frustum.cpp" />
+    <ClCompile Include="..\engine\src\HandlerMgr.cpp" />
     <ClCompile Include="..\engine\src\IOOperation.cpp" />
     <ClCompile Include="..\engine\src\IOService.cpp" />
     <ClCompile Include="..\engine\src\IOServicePool.cpp" />
     <ClCompile Include="..\engine\src\Matrix4.cpp" />
     <ClCompile Include="..\engine\src\Mutex.cpp" />
+    <ClCompile Include="..\engine\src\NetEvent.cpp" />
+    <ClCompile Include="..\engine\src\NetService.cpp" />
     <ClCompile Include="..\engine\src\Object.cpp" />
     <ClCompile Include="..\engine\src\Plane.cpp" />
     <ClCompile Include="..\engine\src\Poller.cpp" />
     <ClCompile Include="..\engine\src\Procotol.cpp" />
+    <ClCompile Include="..\engine\src\Proto.cpp" />
     <ClCompile Include="..\engine\src\Quaternion.cpp" />
     <ClCompile Include="..\engine\src\Ray.cpp" />
     <ClCompile Include="..\engine\src\Ref.cpp" />
     <ClCompile Include="..\engine\src\RenderPath.cpp" />
     <ClCompile Include="..\engine\src\Rtti.cpp" />
     <ClCompile Include="..\engine\src\Scene.cpp" />
-    <ClCompile Include="..\engine\src\Server.cpp" />
     <ClCompile Include="..\engine\src\Session.cpp" />
     <ClCompile Include="..\engine\src\Socket.cpp" />
     <ClCompile Include="..\engine\src\SocketAddress.cpp" />
